# oscottlibs

./: .gitignore  Array.cpp  Array.h  CMakeLists.txt  ErrorCollector.cpp  ErrorCollector.h  LinkedList.cpp  LinkedList.h  LinkedListNode.cpp  LinkedListNode.h  README.md  SimpleString.cpp  SimpleString.h
src/: CMakeLists.txt
src/oscottlibs/: LinkedList.cpp  LinkedList.h  LinkedListNode.cpp  LinkedListNode.h  SimpleString.cpp  SimpleString.h
test/: OscottLibs_test.cpp  OscottLibs_test.pro
